# karbon_api_experiment

./: .gitignore  budgetdata-optomize.py  budgetdatav2.py  budgetv3.py  config.py  main.py  output_data.csv  output_data.json  requirements.txt  zoom.py
old/: Dockerfile  README.md  config.py  deploy.sh  ec2-user-data.sh  main.py  pyproject.toml
old/api_project/: Dockerfile  app.py  requirements.txt
testing/: budgetdata.py  formatted_timesheets.csv  formatted_timesheets.json  main.py  new.py  output_data.csv  output_data.json  test.json
